Multiplayer game and fix to code which evaluated how many cows and bulls.

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,11 @@
 .multipPlayerGameContainer{
   margin: 0 auto;
   margin-top: 50px;
-  width: 400px;
+  width: 600px;
+}
+
+.singlePlayerGame{
+  margin-top: 50px;
 }
 .attempt-success {
   margin: 0 auto;
